# NDK-Sample-Web-Server

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/www/: _index.html  app.css  app.js  article.css  index.html  reset.css  template.html  toast.js
app/src/main/cpp/: Utilities.h  buffer.c  buffer.h  connection.c  connection.h  defines.h  dict.c  dict.h  http_parser.c  http_parser.h  log.h  lotos_epoll.c  lotos_epoll.h  mem_pool.c  mem_pool.h  misc.c  misc.h  native-lib.c  request.c  request.h  response.c  response.h  server.c  server.h  ssstr.c  ssstr.h  strbuf.c  strbuf.h
app/src/main/cpp/qrcode/: crc.h  qr.c  qr.h  qr_dwtable.h  qr_private.h  qr_util.h  qrcmd.c  qrcmd.h  qrcnv.c  qrcnv.h  qrcnv_bmp.c  qrcnv_png.c  qrcnv_svg.c  qrcnv_tiff.c
app/src/main/java/euphoria/psycho/server/: MainActivity.java  ServerService.java  Utilities.java
app/src/main/res/menu/: activity_options.xml
app/src/main/res/values/: strings.xml
